# cell-load

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: CI.yml
examples/: example.toml  iterate_replogle_rpe1.py
src/cell_load/: __init__.py  config.py
src/cell_load/_cli/: filter_on_target_knockdown.py
src/cell_load/data_modules/: __init__.py  perturbation_dataloader.py  samplers.py  tasks.py
src/cell_load/dataset/: __init__.py  _metadata.py  _perturbation.py  perturbation_dataset.py
src/cell_load/mapping_strategies/: batch.py  mapping_strategies.py  random.py
src/cell_load/utils/: data_utils.py  modules.py
src/state_load/: __init__.py
src/state_load/data_modules/: __init__.py  multidataset_dataloader.py  perturbation_dataloader.py  samplers.py  tasks.py
src/state_load/dataset/: __init__.py  perturbation_dataset.py
src/state_load/mapping_strategies/: __init__.py  batch.py  mapping_strategies.py  random.py
src/state_load/utils/: data_utils.py  modules.py
src/vc_load/data_modules/: perturbation_dataloader.py  samplers.py
src/vc_load/dataset/: __init__.py  perturbation_dataset.py
src/vc_load/mapping_strategies/: mapping_strategies.py
tests/: conftest.py  dataloader.py  test_dataloader.py  test_mapping_strategy.py  test_sampler.py
