[project]
name = "state-load"
version = "0.1.12"
description = "Dataloaders for training models on huge single-cell datasets"
readme = "README.md"
authors = [
    { name = "Abhinav Adduri", email = "abhinav.adduri@arcinsistute.org" },
    { name = "Yusuf Roohani", email = "yusuf.roohani@arcinsistute.org" },
    { name = "Noam Teyssier", email = "noam.teyssier@arcinsistute.org" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=1.13.0",        # install PyTorch
    "anndata>=0.9.1",       # install AnnData
    "lightning>=2.0.0",     # install Lightning
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.8"]

[project.scripts]
run_eval = "state_load.__main__:main"
